[package]
name = "wikipedia-zh-antispam"
version = "0.1.3"
edition = "2021"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync", "time"] }
teloxide = { version = "0.17", features = ["macros", "ctrlc_handler"] }
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4", "serde"] }
url = "2"
jieba-rs = "0.7"
regex = "1"
log = "0.4"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tokio-stream = "0.1"
